--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet.</p>
+    <div class="card">
+        <div class="card__container">
+            <h1 class="card__container-head"></h1>
+        </div>
+    </div>
 </body>
 </html>
