--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
             <h1 class="card__container-head"></h1>
         </div>
     </div>
+
+    <footer>
+        <h1></h1>
+        <p></p>
+    </footer>
 </body>
 </html>
