--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet.</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem doloremque temporibus natus omnis cumque ratione aspernatur ullam odit provident deleniti maxime voluptatum, aliquam adipisci eveniet facere voluptates cupiditate aperiam iusto.</p>
+   <h1></h1>
+   <h1></h1>
 </body>
 </html>
